[tool.poetry]
name = "bedrock-workshop"
version = "0.1.0"
description = ""
authors = ["atsushi.fujioka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.40.1"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.9"
langchain-community = "^0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
