[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["atsushi.fujioka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.9"
langchain-community = "^0.3.8"
fastapi = "^0.115.6"
langserve = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
