[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["atsushi.fujioka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
httpx = "0.25.1"
langserve = "0.3.0"
langchain-aws = "^0.2.10"
sse-starlette = "^2.2.1"
uvicorn = "^0.34.0"
langchain-core = "^0.3.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
